Added manipedi option

--- a/SpaDay/Views/Spa/Index.cshtml
+++ b/SpaDay/Views/Spa/Index.cshtml
@@ -24,7 +24,8 @@
     <br>    
     <select name='manipedi'>
         <option value='manicure'>Manicure</option>    
-        <option value='pedicure'>Pedicure</option>      
+        <option value='pedicure'>Pedicure</option>
+        <option value='manipedi'>ManiPedi</option>
     </select>
     <br>
     
