--- a/SpaDay/Views/Spa/Menu.cshtml
+++ b/SpaDay/Views/Spa/Menu.cshtml
@@ -17,7 +17,7 @@
 
     <h5>Facial Treatments</h5>
     <p>Your @ViewBag.skinType skin type is best suited to the follow facial types:</p>
-    
+
     <ul>
         @foreach (string treatment in ViewBag.facials)
         {
@@ -30,8 +30,13 @@
     {
         <p>Our manicure is a great way to spend 30 minutes of your day! We use shea butter hand cream and the finest gel polish.</p>
     }
+    else if (ViewBag.maniPedi == "pedicure")
+    {
+        <p>Relax for 45 minutes in pure luxury! Our massage chairs and experienced nail techs are here to get your feet in shape for sandal season!</p>
+    }
     else
     {
+        <p>Our manicure is a great way to spend 30 minutes of your day! We use shea butter hand cream and the finest gel polish.</p>
         <p>Relax for 45 minutes in pure luxury! Our massage chairs and experienced nail techs are here to get your feet in shape for sandal season!</p>
     }
 
