Added naile polish colors

--- a/SpaDay/Views/Spa/Menu.cshtml
+++ b/SpaDay/Views/Spa/Menu.cshtml
@@ -39,5 +39,11 @@
         <p>Our manicure is a great way to spend 30 minutes of your day! We use shea butter hand cream and the finest gel polish.</p>
         <p>Relax for 45 minutes in pure luxury! Our massage chairs and experienced nail techs are here to get your feet in shape for sandal season!</p>
     }
-
+<div id="nail-polish">
+    <h3>Nail Polish Colors</h3>
+    <div id="red-polish"></div>
+    <div id="blue-polish"></div>
+    <div id="yellow-polish"></div>
+    <div id="green-polish"></div>
+</div>
 </div>
