--- a/SpaDay/Views/Shared/_Layout.cshtml
+++ b/SpaDay/Views/Shared/_Layout.cshtml
@@ -17,6 +17,11 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Add">Add User</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
